# test-hc-app

./: Cargo.toml  README.md  flake.nix  package.json
dnas/test_hc_app/workdir/: dna.yaml
dnas/test_hc_app/zomes/coordinator/test_hc_app/: Cargo.toml
dnas/test_hc_app/zomes/coordinator/test_hc_app/src/: lib.rs  text_entry.rs
dnas/test_hc_app/zomes/integrity/test_hc_app/: Cargo.toml
dnas/test_hc_app/zomes/integrity/test_hc_app/src/: lib.rs  text_entry.rs
tests/: package.json
tests/src/test_hc_app/test_hc_app/: common.ts  text-entry.test.ts
ui/: package.json
ui/src/: App.svelte  types.ts
ui/src/test_hc_app/test_hc_app/: CreateTextEntry.svelte  EditTextEntry.svelte  TextEntryDetail.svelte  types.ts
workdir/: happ.yaml  web-happ.yaml
