[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"

[workspace]
members = ["dnas/*/zomes/coordinator/*", "dnas/*/zomes/integrity/*"]
resolver = "2"

[workspace.dependencies]
hdi = "=0.5.0-rc.1"
hdk = "=0.4.0-rc.1"
serde = "1.0"

[workspace.dependencies.test_hc_app]
path = "dnas/test_hc_app/zomes/coordinator/test_hc_app"

[workspace.dependencies.test_hc_app_integrity]
path = "dnas/test_hc_app/zomes/integrity/test_hc_app"
